src/type_printer/schema_type_printer/tests/snapshots/nitrogql__type_printer__schema_type_printer__tests__type_printing_with_desc.snap
---
source: src/type_printer/schema_type_printer/tests/mod.rs
expression: printed
---
export type __nitrogql_schema = {
  query: Query;
};

type __Beautify<Obj> = { [K in keyof Obj]: Obj[K] } & {};
export type __SelectionSet<Orig, Obj> =
  Orig extends (infer T)[] ? __SelectionSet<T, Obj>[] :
  __Beautify<Pick<{
    [K in keyof Orig]: Obj extends Record<K, infer V> ? V : unknown
  }, Extract<keyof Orig, keyof Obj>>>;
export type __SelectionField<Obj, Key extends string> =
  Obj extends (infer T)[] ? __SelectionField<T, Key> :
  Obj extends Record<Key, infer V> ? V : unknown;
/**
 * This is User.
 */
export type User = {
  __typename: "User";
  id: ID;
  /**
   * Name of user.
   */
  name: String;
  type: UserType;
  /**
   * Age of user. User may choose to not register their age.
   */
  age: Int | null;
  posts: (Post)[];
};

export type Bot = {
  __typename: "Bot";
  id: ID;
};

export type Post = {
  __typename: "Post";
  id: ID;
  title: String;
  tags: (String)[] | null;
  body: String;
};

export type Query = {
  __typename: "Query";
  /**
   * Returns my account.
   * Note that query without authorization header results in a error.
   */
  me: User;
};

/**
 * Node that has an id field.
 */
export type HasID = {
  /**
   * ID of node that is globally unique.
   */
  id: ID;
};

export type UserType = "NormalUser" | "PremiumUser";

export type UserSearchQuery = {
  readonly age?: Int | null;
  readonly name?: String | null;
};


